[tool.poetry]
name = "DDataFlow"
version = "1.1.3"
description = "A tool for end2end data tests"
authors = ["Data products GYG <engineering.data-products@getyourguide.com>"]

[tool.poetry.dependencies]
python = "^3.8"
databricks-cli = {version = ">=0.16"}
pyspark = ">3"
fire = ">=0.4"

[tool.poetry.scripts]
ddataflow = 'ddataflow.ddataflow:main'

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
